# minmaxing

./: .gitignore  AGENTS.md  AGENT_FACTORY_AUDIT_AND_BLUEPRINT.md  BEST_HARNESS_DEEPRESEARCH_PLAN_2026.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  NOTICE  OPEN_CORE_STRATEGY.md  PARALLEL_MODE_RESEARCH_AUDIT_PLAN.md  README.md  REVCLI_HERMES_AGENT_MAP.md  SECURITY.md  SPEC.md  TRADEMARKS.md  hermes-factory.taste.md  hermes-registry.md  settings.json  setup.ps1  setup.sh  taste.md  taste.vision
.claude/: agentcloseout.env.example  settings.json  settings.minimax-executor.example.json  settings.opusminimax-planner.example.json  settings.opusolo.example.json  settings.opussonnet.example.json  settings.solo-fast.example.json  settings.sonnet-executor.example.json  settings.team-safe.example.json
.codex/: config.toml
docs/: harness-capability-map.json  harness-capability-map.md  llm-dark-patterns-suite.md  metacognition-harness-moat-research-2026-05-03.md  runtime-governance-quickstart.md  runtime-hardening.md
memory/: causal.py  cli.py  consolidation.py  recall.py  search.py  sqlite_db.py
schemas/: agent-native-estimate.schema.json  harness-capability-map.schema.json  hive-run.schema.json  opusminimax-benchmark-result.schema.json  opusminimax-packet.schema.json  opusminimax-run.schema.json  verification-result.schema.json  worker-result.schema.json
scripts/: agent-factory-smoke.sh  agent-view-doctor.sh  agent-view-smoke.sh  agentcloseout-physics-smoke.sh  (+65 more)
tools/agentcloseout-physics/engine/: Cargo.toml
tools/agentcloseout-physics/engine/src/: main.rs
(+471 files in other folders)
