[package]
name = "agentcloseout-physics"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Deterministic closeout protocol engine for AgentCloseoutBench"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
hex = "0.4.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
